--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "author": "Michael Janicki",
     "license": "ISC",
     "scripts": {
-        "build": "babel src --out-dir dist",
+        "build": "babel api --out-dir dist",
         "start": "node dist/index.js",
         "dev": "nodemon --exec yarn restart",
         "restart": "rimraf dist && yarn build && yarn start"
@@ -28,7 +28,13 @@
     "devDependencies": {
         "@babel/cli": "^7.10.1",
         "@babel/core": "^7.10.2",
-        "nodemon": "^1.18.3",
+        "@babel/node": "^7.10.1",
+        "@babel/plugin-proposal-class-properties": "^7.0.0",
+        "@babel/plugin-proposal-object-rest-spread": "^7.0.0",
+        "@babel/preset-env": "^7.10.2",
+        "@babel/register": "^7.10.1",
+        "babel-core": "7.0.0-bridge.0",
+        "nodemon": "^1.19.4",
         "prettier": "^1.15.2"
     }
 }
