--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
     "author": "Michael Janicki",
     "license": "ISC",
     "scripts": {
-        "build": "babel api --out-dir dist",
-        "start": "node dist/index.js",
+        "build": "babel server --out-dir dist",
+        "start": "node dist/server.js",
         "dev": "nodemon --exec yarn restart",
         "restart": "rimraf dist && yarn build && yarn start"
     },
@@ -21,8 +21,11 @@
     "homepage": "https://github.com/micjanic/Irrigation#readme",
     "dependencies": {
         "body-parser": "^1.19.0",
+        "cors": "^2.8.5",
         "express": "^4.17.1",
+        "helmet": "^3.23.1",
         "mongoose": "^5.9.18",
+        "morgan": "^1.10.0",
         "rimraf": "^3.0.2"
     },
     "devDependencies": {
