--- a/package.json
+++ b/package.json
@@ -6,10 +6,8 @@
     "author": "Michael Janicki",
     "license": "ISC",
     "scripts": {
-        "build": "babel server --out-dir dist",
-        "start": "node dist/server.js",
-        "dev": "nodemon --exec yarn restart",
-        "restart": "rimraf dist && yarn build && yarn start"
+        "start": "webpack-dev-server --mode development --open --hot",
+        "build": "webpack --mode production"
     },
     "repository": {
         "type": "git",
@@ -20,12 +18,15 @@
     },
     "homepage": "https://github.com/micjanic/Irrigation#readme",
     "dependencies": {
+        "babel-loader": "^8.1.0",
         "body-parser": "^1.19.0",
         "cors": "^2.8.5",
         "express": "^4.17.1",
         "helmet": "^3.23.1",
         "mongoose": "^5.9.19",
         "morgan": "^1.10.0",
+        "react": "^16.13.1",
+        "react-dom": "^16.13.1",
         "rimraf": "^3.0.2"
     },
     "devDependencies": {
@@ -37,7 +38,13 @@
         "@babel/preset-env": "^7.10.2",
         "@babel/register": "^7.10.1",
         "babel-core": "7.0.0-bridge.0",
+        "concurrently": "^5.2.0",
+        "html-loader": "^1.1.0",
+        "html-webpack-plugin": "^4.3.0",
         "nodemon": "^1.19.4",
-        "prettier": "^1.15.2"
+        "prettier": "^1.15.2",
+        "webpack": "^4.43.0",
+        "webpack-cli": "^3.3.12",
+        "webpack-dev-server": "^3.11.0"
     }
 }
