--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
     "author": "Michael Janicki",
     "license": "ISC",
     "scripts": {
-        "start": "webpack-dev-server --mode development --open --hot",
-        "build": "webpack --mode production"
+        "start": "webpack-dev-server --mode development --open --hot --config ./webpack-client.config.js",
+        "build": "webpack --mode production --config ./webpack-client.config.js"
     },
     "repository": {
         "type": "git",
@@ -18,7 +18,6 @@
     },
     "homepage": "https://github.com/micjanic/Irrigation#readme",
     "dependencies": {
-        "babel-loader": "^8.1.0",
         "body-parser": "^1.19.0",
         "cors": "^2.8.5",
         "express": "^4.17.1",
@@ -31,13 +30,14 @@
     },
     "devDependencies": {
         "@babel/cli": "^7.10.1",
-        "@babel/core": "^7.10.2",
+        "@babel/core": "^7.10.4",
         "@babel/node": "^7.10.1",
         "@babel/plugin-proposal-class-properties": "^7.0.0",
         "@babel/plugin-proposal-object-rest-spread": "^7.0.0",
-        "@babel/preset-env": "^7.10.2",
+        "@babel/preset-env": "^7.10.4",
         "@babel/register": "^7.10.1",
         "babel-core": "7.0.0-bridge.0",
+        "babel-loader": "^8.1.0",
         "concurrently": "^5.2.0",
         "html-loader": "^1.1.0",
         "html-webpack-plugin": "^4.3.0",
@@ -45,6 +45,7 @@
         "prettier": "^1.15.2",
         "webpack": "^4.43.0",
         "webpack-cli": "^3.3.12",
-        "webpack-dev-server": "^3.11.0"
+        "webpack-dev-server": "^3.11.0",
+        "webpack-node-externals": "^1.7.2"
     }
 }
